--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -26,9 +26,27 @@ $family-primary: 'Karla', sans-serif;
 @import "bulma/bulma";
 
 .google-map {
-  height: 500px;
+  border-radius: 3px;
+  height: 80vh;
 }
 
 .show-map {
+  border-radius: 3px;
   height: 200px;
+}
+
+body {
+  &.in-transition {
+    transition: transform 900ms ease;
+  }
+}
+
+#scrollButton {
+  text-align: center;
+}
+
+#target {
+  background: orange;
+  margin-top: 100vh;
+  height: 2000px;
 }
