--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -24,6 +24,7 @@ $family-primary: 'Karla', sans-serif;
 
 // 6. Import the rest of Bulma
 @import "bulma/bulma";
+@import "BarsIndex";
 
 .google-map {
   border-radius: 3px;
