removed border-bottom-radius on barCards

--- a/src/scss/_barsIndex.scss
+++ b/src/scss/_barsIndex.scss
@@ -12,6 +12,8 @@
 
 .index-photo {
   border-radius: 3px;
+  border-bottom-right-radius: 0px;
+  border-bottom-left-radius: 0px;
   height: 200px;
   width: 300px;
 }
