--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,6 +10,8 @@ $primary-invert: #fff;
 $link: #8884FF;
 $success: #A0E8AF;
 $danger: #FF5151;
+$bright: #A0E8AF;
+$sub-grey: $grey-light;
 $background: white;
 $family-primary: 'Source Sans Pro Extra-Light', sans-serif;
 $family-secondary: 'Open Sans', sans-serif;
