formatted layout on MatchCard

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,6 +12,7 @@ $success: #A0E8AF;
 $danger: #FF5151;
 $bright: #A0E8AF;
 $sub-grey: $grey-light;
+$main-grey: grey;
 $background: white;
 $family-primary: 'Source Sans Pro Extra-Light', sans-serif;
 $family-secondary: 'Open Sans', sans-serif;
