--- a/src/scss/_matchCard.scss
+++ b/src/scss/_matchCard.scss
@@ -1,16 +1,40 @@
 div {
   &.match-card {
-    .competition-name {
-      font-family: $family-secondary;
-      color: $sub-grey;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    height: 250px;
+    width: 250px;
+    .match-info {
+      text-align: center;
+      .competition-name {
+        color: $main-grey;
+        font-family: $family-secondary;
+        font-size: 18px;
+      }
+      .date-time {
+        color: $sub-grey;
+        font-family: $family-secondary;
+        font-size: 14px;
+      }
     }
-    .date-time {
-      font-family: $family-secondary;
-      color: $sub-grey;
-    }
-    .team-name {
-      font-family: $family-primary;
-      font-size: 26px;
+    .team-section {
+      display: flex;
+      flex-direction: column;
+      height: 100px;
+      justify-content: space-around;
+      // margin: 10px auto;
+      text-align: center;
+      .team-name {
+        font-family: $family-primary;
+        font-size: 22px;
+      }
+      .versus {
+        font-family: $family-primary;
+        font-size: 14px;
+      }
     }
     .match-info-button {
       background-color: transparent;
