formatted grid for MatchesIndex

--- a/src/scss/_matchCard.scss
+++ b/src/scss/_matchCard.scss
@@ -6,6 +6,7 @@ div {
     align-items: center;
     justify-content: space-around;
     height: 250px;
+    margin: 20px;
     width: 250px;
     .match-info {
       text-align: center;
