--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -31,6 +31,7 @@ $family-secondary: 'Open Sans', sans-serif;
 @import "BarsIndex";
 @import "navbar";
 @import "matchCard";
+@import "matchGrid";
 
 .google-map {
   border-radius: 3px;
