added $main-width variable to scss

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -16,6 +16,7 @@ $main-grey: grey;
 $background: white;
 $family-primary: 'Source Sans Pro Extra-Light', sans-serif;
 $family-secondary: 'Open Sans', sans-serif;
+$main-width: 900px;
 
 // 5. Add new color variables to the color map.
 // @import "bulma/utilities/derived-variables.sass";
