--- a/src/scss/_barsIndex.scss
+++ b/src/scss/_barsIndex.scss
@@ -6,8 +6,8 @@
 .card {
   border-radius: 3px;
   height: 300px;
-  // margin: 0 auto;
-  width: 300px;
+  margin: 0 auto;
+  // width: 300px;
 }
 
 .index-photo {
