--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -33,10 +33,13 @@ $main-width: 900px;
 @import "navbar";
 @import "matchCard";
 @import "matchGrid";
+@import "barCard";
 
 .google-map {
   border-radius: 3px;
   height: 80vh;
+  margin: 0 auto;
+  width: $main-width;
 }
 
 .show-map {
