--- a/src/scss/_barCard.scss
+++ b/src/scss/_barCard.scss
@@ -1,10 +1,15 @@
 div {
   &.bar-card {
+    border-radius: 3px;
     height: 250px;
+    margin: 20px auto;
     width: 250px;
     .card-image {
       width: 250px;
       .index-photo {
+        border-radius: 3px;
+        border-bottom-right-radius: 0px;
+        border-bottom-left-radius: 0px;
         height: 150px;
         width: 250px;
       }
