--- a/src/scss/_barsIndex.scss
+++ b/src/scss/_barsIndex.scss
@@ -1,22 +1,22 @@
+div {
+  &.index-map {
+    height: 60vh;
+    margin: auto;
+    margin-top: 30px;
+    width: $main-width;
+  }
+}
+
 .bars-container {
   display: flex;
   flex-wrap: wrap;
-}
-
-.card {
-  border-radius: 3px;
-  height: 300px;
   margin: 0 auto;
-  // width: 300px;
+  width: $main-width;
 }
 
-.index-photo {
-  border-radius: 3px;
-  border-bottom-right-radius: 0px;
-  border-bottom-left-radius: 0px;
-  height: 200px;
-  width: 300px;
-}
+
+
+
 
 .button-area {
   height: 20vh;
@@ -27,7 +27,14 @@
 }
 
 #scrollButton {
+  color: black;
+  display: block;
+  font-family: $family-primary;
+  font-size: 26px;
+  margin: 0 auto;
+  margin-top: 50px;
   text-align: center;
+  width: 300px;
 }
 
 #target {
