formatted header on Bar and Match show pages

--- a/src/scss/_barShow.scss
+++ b/src/scss/_barShow.scss
@@ -3,7 +3,11 @@ div {
   div {
     &.row {
       .bar-info {
+        font-family: $family-secondary;
         text-align: center;
+        .page-title {
+          font-size: 22px;
+        }
       }
     }
   }
