--- a/src/scss/_barShow.scss
+++ b/src/scss/_barShow.scss
@@ -22,6 +22,9 @@ div {
   }
   .show-container {
     width: $main-width;
+    .bar-description {
+      font-family: $family-secondary;
+    }
     .map-image-container {
       display: flex;
       flex-direction: row;
@@ -29,6 +32,7 @@ div {
       .image-container {
         height: 300px;
         .barshow-image {
+          border-radius: 3px;
           height: 300px;
         }
       }
