--- a/src/scss/_barShow.scss
+++ b/src/scss/_barShow.scss
@@ -5,8 +5,13 @@ div {
       .bar-info {
         background-color: $bright;
         color: white;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
         font-family: $family-secondary;
         font-weight: bold;
+        height: 130px;
         text-align: center;
         .page-title {
           font-size: 22px;
@@ -51,6 +56,9 @@ div {
 @media only screen and (max-width: 900px) {
 
   div {
+    .bar-info {
+      height: 130px;
+    }
     .show-container {
       width: 600px;
       .map-image-container {
