--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -49,3 +49,8 @@ body {
     transition: transform 900ms ease;
   }
 }
+
+.landing-page {
+  background-image: url('https://images.unsplash.com/photo-1485905947173-6c548e51181c?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=e105d1cf2fa7351ecb8c15c6948b46d7&auto=format&fit=crop&w=1674&q=800');
+  height: 100vh;
+}
