added typewriter effect to landingPage

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -67,12 +67,31 @@ body {
 //       opacity: 0.3;
 //
 // }
+//
+// .typewriter h2 {
+//   overflow: hidden; /* Ensures the content is not revealed until the animation */
+//   border-right: .15em solid #8884FF; /* The typwriter cursor */
+//   white-space: nowrap; /* Keeps the content on a single line */
+//   margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+//   letter-spacing: .15em; /* Adjust as needed */
+//   animation:
+//     typing 3.5s steps(40, end),
+//     blink-caret .75s step-end infinite;
+// }
 
-@keyframes blinker {
-  50% {
-    opacity: 0;
-  }
+/* The typing effect */
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
 }
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: #8884FF; }
+}
+
+
 
 .landing-page {
   background-color: $bright;
@@ -81,11 +100,20 @@ body {
   align-items: center;
   // justify-content: center;
   height: 100vh;
+  text-align: center;
   .banner-text {
     color: white;
     font-family: $family-primary;
     font-size: 40px;
     margin-top: 100px;
+    overflow: hidden;
+    white-space: nowrap;
+    animation:
+      typing 3.5s steps(40, end),
+      blink-caret .75s step-end infinite;
+  }
+  .under-text {
+    font-size: 18px;
   }
   .front-links-container {
     display: flex;
