--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -196,6 +196,9 @@ body {
       font-size: 25px;
       margin-top: 100px;
     }
+    .under-text {
+      font-size: 10px;
+    }
     .front-links-container {
       display: flex;
       flex-direction: column;
