corrected typo for navbar on app.js

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -30,7 +30,7 @@ $login-form-width: 400px;
 
 // 6. Import the rest of Bulma
 @import "bulma/bulma";
-@import "BarsIndex";
+@import "barsIndex";
 @import "navbar";
 @import "matchCard";
 @import "matchGrid";
