--- a/src/scss/_matchCard.scss
+++ b/src/scss/_matchCard.scss
@@ -1,6 +1,7 @@
 div {
   &.match-card {
     box-sizing: border-box;
+    border-radius: 3px;
     display: flex;
     flex-direction: column;
     align-items: center;
