--- a/src/scss/_matchGrid.scss
+++ b/src/scss/_matchGrid.scss
@@ -6,3 +6,21 @@ div {
     width: $main-width;
   }
 }
+
+@media only screen and (max-width: 900px) {
+
+  div{
+    &.match-grid {
+      width: 600px;
+    }
+  }
+}
+
+@media only screen and (max-width: 640px) {
+
+  div {
+    &.match-grid {
+      width: 300px;
+    }
+  }
+}
